--- a/package.json
+++ b/package.json
@@ -2,7 +2,42 @@
   "name": "neurot477",
   "version": "1.0.0",
   "main": "index.js",
+  "scripts": {
+    "seed": "node seeds",
+    "build": "webpack -p",
+    "serve": "webpack-dev-server",
+    "serve:flask": "pipenv run flask run -p 4000",
+    "postinstall": "[ \"$NODE_ENV\" = \"production\" ] && yarn build || exit 0"
+  },
   "repository": "git@github.com:tomjhinton/neurot477.git",
   "author": "Tom Hinton <tomjhinton@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+  "@babel/core": "^7.6.4",
+  "@babel/preset-env": "^7.6.3",
+  "@babel/preset-react": "^7.6.3",
+  "axios": "^0.19.2",
+  "babel-loader": "^8.0.6",
+  "cannon": "^0.6.2",
+  "copy-webpack-plugin": "^5.0.4",
+  "css-loader": "^3.2.0",
+  "file-loader": "^5.0.2",
+  "glsl-noise": "^0.0.0",
+  "glsl-shader-loader": "^0.1.6",
+  "glslify": "^7.0.0",
+  "glslify-import": "^3.1.0",
+  "glslify-loader": "^2.0.0",
+  "gsap": "^3.2.4",
+  "html-webpack-plugin": "^3.2.0",
+  "node-sass": "^4.12.0",
+  "react": "^16.10.2",
+  "react-dom": "^16.10.2",
+  "react-router-dom": "^5.1.2",
+  "sass-loader": "^8.0.0",
+  "style-loader": "^1.0.0",
+  "three": "^0.114.0",
+  "webpack": "^4.41.2",
+  "webpack-cli": "^3.3.9",
+  "webpack-dev-server": "^3.8.2"
+}
 }
